Had a better idea for the project voice jam
Changed into something a bit more humorous

--- a/activities/voice-jam-v2/index.html
+++ b/activities/voice-jam-v2/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-  <title>Slamina</title>
+  <title>Rez Slang</title>
 
   <!-- CSS stylesheet(s) -->
   <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -19,9 +19,9 @@
   <!-- My script(s) -->
   <script src="js/script.js"></script>
 </head>
-<!-- HTML would go here if needed. -->
 
 <body>
+  <!-- HTML would go here if needed. -->
 </body>
 
 </html>
