--- a/activities/voice-jam-v3/index.html
+++ b/activities/voice-jam-v3/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-  <title>Voices of ancestral future</title>
+  <title>How to speak Native American, Sort Of: A Light-Hearted Lexicon</title>
 
   <!-- CSS stylesheet(s) -->
   <link rel="stylesheet" type="text/css" href="css/style.css" />
