--- a/learning/object-detector/index.html
+++ b/learning/object-detector/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-  <title>How to speak Native American, Sort Of: A Light-Hearted Lexicon</title>
+  <title>Object Detector</title>
 
   <!-- CSS stylesheet(s) -->
   <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -13,8 +13,10 @@
   <!-- Library script(s) -->
   <script src="js/libraries/p5.min.js"></script>
   <script src="js/libraries/p5.sound.min.js"></script>
-  <!-- p5 specch library -->
-  <script src="https://cdn.jsdelivr.net/gh/IDMNYU/p5.js-speech@0.0.3/lib/p5.speech.js"></script>
+  <!-- ML5 Object Detection -->
+  <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+
+
 
   <!-- My script(s) -->
   <script src="js/script.js"></script>
