--- a/activities/ai-jam-v2/index.html
+++ b/activities/ai-jam-v2/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-  <title>Slamina</title>
+  <title>NorthernLights</title>
 
   <!-- CSS stylesheet(s) -->
   <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -13,8 +13,9 @@
   <!-- Library script(s) -->
   <script src="js/libraries/p5.min.js"></script>
   <script src="js/libraries/p5.sound.min.js"></script>
-  <!-- p5 specch library -->
-  <script src="https://cdn.jsdelivr.net/gh/IDMNYU/p5.js-speech@0.0.3/lib/p5.speech.js"></script>
+  <!-- ml5 ai library -->
+  <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+
 
   <!-- My script(s) -->
   <script src="js/script.js"></script>
