--- a/activities/ai-jam-v2/index.html
+++ b/activities/ai-jam-v2/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-  <title>NorthernLights</title>
+  <title>Aurora Interplay V1</title>
 
   <!-- CSS stylesheet(s) -->
   <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -15,7 +15,6 @@
   <script src="js/libraries/p5.sound.min.js"></script>
   <!-- ml5 ai library -->
   <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
-
 
   <!-- My script(s) -->
   <script src="js/script.js"></script>
